# CGH

./: CMakeLists.txt  LICENSE  README.md
CMake/: Config_Assimp.txt  Config_OpenCV.txt  Config_PCL.txt
Cfg/Bunny/: Bunny.json
Src/: CMakeLists.txt
Src/CGH/: CMakeLists.txt  Executor.cpp  Executor.h  ExecutorCpp.cpp  ExecutorCpp.h  ExecutorCuda.cpp  ExecutorCuda.h  Main.cpp  WaveFrontAccum.cu  WaveFrontAccum.cuh
Src/Common/: CMakeLists.txt  Export.h  JSon.cpp  JSon.h  JSon.hpp  Template.cpp  Template.h  Timer.h
Src/Core/: CMakeLists.txt  Job.cpp  Job.h
